k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projectpulse-web
  labels:
    app: projectpulse-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: projectpulse-web
  template:
    metadata:
      labels:
        app: projectpulse-web
    spec:
      containers:
        - name: web
          # TODO: ganti dengan image hasil `docker build` kamu, mis. ghcr.io/<org>/projectpulse-web:latest
          image: projectpulse-web:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
