k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projectpulse-web
spec:
  selector:
    app: projectpulse-web
  ports:
    - port: 3000
      targetPort: 80
  type: ClusterIP
