k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projectpulse-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: projectpulse.local   # TODO: sesuaikan, tambahkan ke /etc/hosts saat pakai minikube/kind
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: projectpulse-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: projectpulse-web
                port:
                  number: 3000
